@@ -1,9 +1,10 @@
 ---
-version: 4
-datadir: data
+version: 5
+defaults:
+  datadir: data
+  data_hash: yaml_data
 hierarchy:
   - name: "journald"
-    backend: yaml
-    path: "journald/is_%{facts.systemd}"
+    path: "journald/is_%{facts.systemd}.yaml"
   - name: "common"
-    backend: yaml
+    path: "common.yaml"
