@@ -50,8 +50,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.9.2 < 6.0.0"
+      "version_requirement": ">= 4.10.4 < 6.0.0"
     }
-  ],
-  "data_provider": "hiera"
+  ]
 }
